--- a/_includes/footer_img2.html
+++ b/_includes/footer_img2.html
@@ -2,5 +2,5 @@
 <div style="width:40%;vertical-align:middle; text-align:center">
 <img src="images/footer_ut/RGB_university_tagline_horizontal.png" alt="UT Logo" style="width:auto;max-width:100%" /></div>
 <div style="width:40%;vertical-align:middle; text-align:center">
-<img src="images/footer_ut/Oden.png" alt="Oden Logo" style="width:auto;max-width:100%" /></div>
+<img src="images/footer_ut/utcs_logo.png" alt="UTCS Logo" style="width:auto;max-width:100%" /></div>
 </div>
